added all content and worked on responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
         <a class="nav-item" href="path/to/subpage">ARTICLES</a>
         <a class="nav-item" href="path/to/subpage">REVIEWS</a>
         <a class="nav-item" href="path/to/subpage">ABOUT</a>
-        <a class="nav-item" href="path/to/subpage">MY PAGES</a>
+        <a class="nav-item" href="path/to/subpage">CONTACT</a>
       </nav>
     </header>
 
@@ -61,7 +61,6 @@
           non consectetur a. Semper quis lectus nulla at volutpat 
           diam ut venenatis. Consectetur adipiscing elit ut aliquam. 
         </p>
-        <p class="signature-small">BY ELI ANDREWS</p>
       </div>
       <div class="grid-item small-news">
         <h3>Live recordings - yay or nay?</h3>
@@ -74,41 +73,67 @@
              Malesuada fames ac turpis egestas maecenas pharetra 
              convallis. Mauris ultrices eros in cursus. A condimentum 
              vitae sapien pellentesque habitant morbi tristique. Est 
-             velit egestas dui id ornare.
+             velit egestas dui id ornare. Id diam maecenas ultricies mi eget mauris pharetra et 
+             ultrices. Condimentum lacinia quis vel eros. Volutpat 
+             ac tincidunt vitae semper. Neque ornare aenean euismod 
+             elementum nisi quis eleifend. Sodales ut etiam sit amet 
+             nisl purus in mollis nunc. 
           </p>
       </div>
       <div class="grid-item small-news">
-        <h3>news 3</h3>
-        <p class="small-news-text">Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. 
-          Etiam sit amet nisl purus in mollis nunc sed id.</p>
+        <h3>Vinyl production still on the rise</h3>
+        <img class="grid-item small-image" src="blue-vinyl.jpg" alt="image of blue vinyl" />
       </div>
       <div class="grid-item small-news">
-        <h3>news 4</h3>
-        <p class="small-news-text">Quam elementum pulvinar etiam non quam lacus suspendisse 
-          faucibus interdum.</p>
+        <h3>New recording studio downtown</h3>
+        <img class="grid-item small-image" src="baseplayer.jpg" alt="image of baseplayer" />
+        <p class="small-news-text">Quam elementum pulvinar etiam non 
+          quam lacus suspendisse faucibus interdum. Quis commodo odio 
+          aenean sed adipiscing diam. Nisl suscipit adipiscing bibendum 
+          est ultricies integer quis auctor. Massa id neque aliquam 
+          vestibulum morbi blandit cursus risus at. Id diam maecenas 
+          ultricies mi eget mauris pharetra et ultrices. Condimentum 
+          lacinia quis vel eros.
+        </p>
       </div>
       <div class="grid-item small-news">
-        <h3>news 5</h3>
+        <h3>Inside our picks for Best Albums of 2022</h3>
+        <p class="small-news-text">Elementum curabitur vitae nunc sed 
+          velit dignissim sodales ut eu. Etiam sit amet nisl purus 
+          in mollis nunc sed id. Massa placerat duis ultricies lacus 
+          sed turpis tincidunt id. Eu facilisis sed odio morbi quis 
+          commodo odio. Ridiculus mus mauris vitae ultricies leo. 
+          Amet est placerat in egestas erat imperdiet. Quis commodo 
+          odio aenean sed adipiscing diam. Nisl suscipit adipiscing 
+          bibendum est ultricies integer quis auctor. Bibendum arcu 
+          vitae elementum curabitur vitae nunc sed. Scelerisque 
+          viverra mauris in aliquam. Pellentesque sit amet porttitor 
+          eget dolor morbi. Suspendisse potenti nullam ac tortor vitae
+          purus faucibus ornare suspendisse. Diam quis enim lobortis 
+          scelerisque. Mauris rhoncus aenean vel elit. Purus non enim 
+          praesent elementum facilisis leo vel fringilla. 
+        </p>
       </div>
       <div class="grid-item small-news">
-        <h3>news 6</h3>
-        <p class="small-news-text">Volutpat ac tincidunt vitae semper quis lectus nulla 
-          at volutpat.</p>
+        <h3>Richard White celebrates "Eleven Hours" twenty year anniversary</h3>
+        <img class="grid-item small-image" src="musician-cut.png" alt="image of Richard White" />
       </div>
       <div class="grid-item small-news">
-        <h3>news 7</h3>
+        <h3>Musician's Collective shares the secrets behind their success</h3>
+        <img class="grid-item small-image" src="group.jpg" alt="image of group"/>
+        <p class="small-news-text">Volutpat ac tincidunt vitae semper 
+          quis lectus nulla at volutpat. Neque ornare aenean euismod 
+          elementum nisi quis eleifend.
+        </p>
       </div>
       <div class="grid-item small-news">
-        <h3>news 8</h3> 
-      <p class="small-news-text">Aliquam id diam maecenas ultricies mi eget. </p>
+        <h3>Mayra City Soul Festival opens on Friday with Adla Ingers as main act</h3> 
+        <img class="grid-item small-image" src="woman-singing2.jpg" alt="image of woman woman-singing" />
+        <p class="small-news-text">Aliquam id diam maecenas ultricies mi eget. Amet est placerat in egestas erat imperdiet. Quis commodo 
+          odio aenean sed adipiscing diam.
+        </p>
       </div>     
 </section>
-  
 
-    <!--Remove this if new grid works out-->
-    <section class="smaller-news-grid">
-      <!-- The other news  -->
-    </section>
-
-  </body>
+</body>
 </html>
