Finalized version before submitting project

--- a/code/index.html
+++ b/code/index.html
@@ -12,9 +12,9 @@
     <header>
       <h1 class="h1-header">
           <!--Change Home-link to netlify url when deployed-->
-        <a href="/index.html">
-          <img src="/wine-glass-solid.svg" class="logo-wineglass" alt="Logo of wine glass">Wine Travels Magazine
-        </a>
+      <a href="/index.html">
+        <img src="/wine-glass-solid.svg" class="logo-wineglass" alt="Logo of wine glass">Wine Travels Magazine
+      </a>
       </h1>
       <button class="button-subscribe" onclick="window.location.href='https://www.wine-searcher.com/newsletter-signup';">Subscribe to newsletter</button>
     </header>
@@ -22,7 +22,7 @@
       <button class="hamburger-menu">
         <i class="fa fa-bars"></i>
       </button>
-      <nav class="topnav">
+      <nav class="top-nav">
         <ul>
           <li><a href="https://www.lonelyplanet.com" target="_blank">Travel guides</a></li>
           <li><a href="https://vineyards.com" target="_blank">Vineyards</a></li>
@@ -33,113 +33,113 @@
       <input class="search-field" type="text" placeholder="Search...">
     </section>
     <main class="grid-container-main">
-      <section class="news-big">
+      <article class="news-big">
         <a href="https://www.spain.info/en/destination/jerez-la-frontera/">
-          <img src="https://images.pexels.com/photos/210017/pexels-photo-210017.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-spain" alt="Picture of an alley in Spain">
-            <div class="news-spain">
-              <h2>Spain's hidden gem </h2>
-              <p>Longing for picturesque alleys, plazas filled with restaurants and to deep dive into Spain's gold - Sherry? Look no further for a guide to Jerez de la Fontera</p>
-              <button class="button-readmore">Read more</button>
-            </a>
-          </div><!--Closing tag for <a> and <div> should change place? But CSS not working when changed-->
-      </section>
+        <img src="https://images.pexels.com/photos/210017/pexels-photo-210017.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-spain" alt="Picture of an alley in Spain">
+          <div class="news-spain">
+            <h2>Spain's hidden gem </h2>
+            <p>Longing for picturesque alleys, plazas filled with restaurants and to deep dive into Spain's gold - Sherry? Look no further for a guide to Jerez de la Fontera</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </div><!--Closing tag for <a> and <div> should change place? But CSS not working when changed-->
+      </article>
       <section class="news-small">
-        <div class="card france">
+        <article class="news-card france">
           <a href="https://en.wikipedia.org/wiki/France" target="_blank">
           <img src="https://images.pexels.com/photos/943700/pexels-photo-943700.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of a vineyard in France">
           <h3>France</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci fuga quam ut provident, est perspiciatis molestiae vitae, tempora quisquam quasi dolorum ullam rerum esse veritatis ea cum non, blanditiis neque!</p>
           <button class="button-readmore">Read more</button>
           </a>
-        </div><!--Closing tag for <a> and <div> should change place? But CSS not working when changed-->
-        <div class="card germany">
+        </article><!--Closing tag for <a> and <div> should change place? But CSS not working when changed-->
+        <article class="news-card germany">
           <a href="https://en.wikipedia.org/wiki/Germany" target="_blank">
-          <img src="https://images.pexels.com/photos/3756623/pexels-photo-3756623.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of wine being poured into wine glass">
-          <h3>Germany</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolores nihil quia facere. Reprehenderit iusto sunt omnis perferendis. Deserunt excepturi impedit autem odit. Recusandae suscipit reprehenderit enim iusto nisi ratione?</p>
-          <button class="button-readmore">Read more</button>
+            <img src="https://images.pexels.com/photos/3756623/pexels-photo-3756623.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of wine being poured into wine glass">
+            <h3>Germany</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolores nihil quia facere. Reprehenderit iusto sunt omnis perferendis. Deserunt excepturi impedit autem odit. Recusandae suscipit reprehenderit enim iusto nisi ratione?</p>
+            <button class="button-readmore">Read more</button>
           </a>
-        </div>
-        <div class="card austria">
+        </article>
+        <article class="news-card austria">
           <a href="https://en.wikipedia.org/wiki/Austria" target="_blank">
-          <img src="https://images.pexels.com/photos/1054181/pexels-photo-1054181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of nature in Austria">
-          <h3>Austria</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ipsam recusandae beatae nulla itaque dignissimos iusto harum quas sequi. Quia rerum voluptate a tempore doloremque placeat beatae fugiat, corporis magnam.</p>
-          <button class="button-readmore">Read more</button>
+            <img src="https://images.pexels.com/photos/1054181/pexels-photo-1054181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of nature in Austria">
+            <h3>Austria</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ipsam recusandae beatae nulla itaque dignissimos iusto harum quas sequi. Quia rerum voluptate a tempore doloremque placeat beatae fugiat, corporis magnam.</p>
+            <button class="button-readmore">Read more</button>
           </a>
-        </div>
-        <div class="card portugal">
+        </article>
+        <article class="news-card portugal">
           <a href="https://en.wikipedia.org/wiki/Portugal" target="_blank">
-          <img src="https://images.pexels.com/photos/5191373/pexels-photo-5191373.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of city in Portugal">
-          <h3>Portugal</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid quam animi facilis consectetur quisquam amet molestias non quis repudiandae! Facilis repudiandae velit optio nemo repellendus ipsa exercitationem quisquam voluptas.</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card sweden">
+            <img src="https://images.pexels.com/photos/5191373/pexels-photo-5191373.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of city in Portugal">
+            <h3>Portugal</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid quam animi facilis consectetur quisquam amet molestias non quis repudiandae! Facilis repudiandae velit optio nemo repellendus ipsa exercitationem quisquam voluptas.</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card sweden">
           <a href="https://en.wikipedia.org/wiki/Sweden" target="_blank">
-          <img src="https://images.pexels.com/photos/1198507/pexels-photo-1198507.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of Swedish landscape">
-          <h3>Sweden</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, commodi natus repudiandae nostrum nulla accusamus provident pariatur, asperiores voluptatibus nihil quo vero excepturi maiores doloribus hic facilis ipsa laborum. Provident.</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card italy">
+            <img src="https://images.pexels.com/photos/1198507/pexels-photo-1198507.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of Swedish landscape">
+            <h3>Sweden</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, commodi natus repudiandae nostrum nulla accusamus provident pariatur, asperiores voluptatibus nihil quo vero excepturi maiores doloribus hic facilis ipsa laborum. Provident.</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card italy">
           <a href="https://en.wikipedia.org/wiki/Italy" target="_blank">
-          <img src="https://images.pexels.com/photos/2954924/pexels-photo-2954924.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of glass with red wine in Italy">
-          <h3>Italy</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod non assumenda quibusdam harum pariatur deleniti? Ducimus, veniam cumque ab obcaecati iusto sapiente ea atque! Culpa vero voluptatum tenetur ullam cumque.</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card australia">
+            <img src="https://images.pexels.com/photos/2954924/pexels-photo-2954924.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of glass with red wine in Italy">
+            <h3>Italy</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod non assumenda quibusdam harum pariatur deleniti? Ducimus, veniam cumque ab obcaecati iusto sapiente ea atque! Culpa vero voluptatum tenetur ullam cumque.</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card australia">
           <a href="https://en.wikipedia.org/wiki/Australia" target="_blank">
-          <img src="https://images.pexels.com/photos/7088958/pexels-photo-7088958.jpeg" alt="Picture of the oper house in Sydney">
-          <h3>Australia</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae accusantium porro praesentium? Distinctio tempore facilis error, doloremque rerum aspernatur ea harum odio perspiciatis voluptas. Quod repellendus dicta iusto unde!</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card south-africa">
+            <img src="https://images.pexels.com/photos/7088958/pexels-photo-7088958.jpeg" alt="Picture of the oper house in Sydney">
+            <h3>Australia</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut molestiae accusantium porro praesentium? Distinctio tempore facilis error, doloremque rerum aspernatur ea harum odio perspiciatis voluptas. Quod repellendus dicta iusto unde!</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card south-africa">
           <a href="https://en.wikipedia.org/wiki/South_Africa" target="_blank">
-          <img src="https://images.pexels.com/photos/442116/pexels-photo-442116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of a vineyard">
-          <h3>South Africa</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quos atque ipsa aliquam odit numquam? Facilis, repellat exercitationem. Iusto vero quia repellendus dolor! Exercitationem eius id quis, dignissimos autem nulla?</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card new-zealand">
+            <img src="https://images.pexels.com/photos/442116/pexels-photo-442116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of a vineyard">
+            <h3>South Africa</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quos atque ipsa aliquam odit numquam? Facilis, repellat exercitationem. Iusto vero quia repellendus dolor! Exercitationem eius id quis, dignissimos autem nulla?</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card new-zealand">
           <a href="https://en.wikipedia.org/wiki/New_Zealand" target="_blank">
-          <img src="https://images.pexels.com/photos/37650/new-zealand-lake-mountain-landscape-37650.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of a restaurant with a scenic view in New Zealand">
-          <h3>New Zealand</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores perferendis itaque atque laudantium, voluptas sequi vitae magnam beatae quae tenetur repellendus voluptate ut porro alias cumque illum exercitationem, iure suscipit?</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card usa">
+            <img src="https://images.pexels.com/photos/37650/new-zealand-lake-mountain-landscape-37650.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of a restaurant with a scenic view in New Zealand">
+            <h3>New Zealand</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores perferendis itaque atque laudantium, voluptas sequi vitae magnam beatae quae tenetur repellendus voluptate ut porro alias cumque illum exercitationem, iure suscipit?</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card usa">
           <a href="https://en.wikipedia.org/wiki/United_States" target="_blank">
-          <img src="https://images.pexels.com/photos/3135090/pexels-photo-3135090.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of Highway 1">
-          <h3>USA</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam natus repellendus iusto maiores vitae, quibusdam quas odit reprehenderit voluptates quam nostrum saepe veritatis id. Accusantium pariatur illo molestiae eum.</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card argentina">
+            <img src="https://images.pexels.com/photos/3135090/pexels-photo-3135090.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of Highway 1">
+            <h3>USA</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam natus repellendus iusto maiores vitae, quibusdam quas odit reprehenderit voluptates quam nostrum saepe veritatis id. Accusantium pariatur illo molestiae eum.</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card argentina">
           <a href="https://en.wikipedia.org/wiki/Argentina" target="_blank">
-          <img src="https://images.pexels.com/photos/8280050/pexels-photo-8280050.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of musicians in Argentina">
-          <h3>Argentina</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ullam quo, unde earum quas tenetur enim, tempora aliquid cumque dolores est delectus impedit magnam quisquam sequi a assumenda excepturi distinctio.</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
-        <div class="card lebanon">
+            <img src="https://images.pexels.com/photos/8280050/pexels-photo-8280050.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of musicians in Argentina">
+            <h3>Argentina</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ullam quo, unde earum quas tenetur enim, tempora aliquid cumque dolores est delectus impedit magnam quisquam sequi a assumenda excepturi distinctio.</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
+        <article class="news-card lebanon">
           <a href="https://en.wikipedia.org/wiki/Lebanon" target="_blank">
-          <img src="https://images.pexels.com/photos/2448729/pexels-photo-2448729.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of pouring red wine in a wine glass">
-          <h3>Lebanon</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium qui sint quaerat, incidunt deserunt nam? Tempora excepturi placeat ex doloribus id ut delectus vitae. Dolor eaque id quos perspiciatis nemo?</p>
-          <button class="button-readmore">Read more</button>
-        </a>
-        </div>
+            <img src="https://images.pexels.com/photos/2448729/pexels-photo-2448729.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Picture of pouring red wine in a wine glass">
+            <h3>Lebanon</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium qui sint quaerat, incidunt deserunt nam? Tempora excepturi placeat ex doloribus id ut delectus vitae. Dolor eaque id quos perspiciatis nemo?</p>
+            <button class="button-readmore">Read more</button>
+          </a>
+        </article>
       </section>
     </main>
     <footer>
