--- a/code/TheEmptyplate.html
+++ b/code/TheEmptyplate.html
@@ -11,9 +11,9 @@
 
 
      
-<header
+<header>
   
-      <!-- Some kind of logo and navbar -->
+ 
      <nav class="menu"> <!--Flexbox container-->
    
   <ul class="menu">
