Finalized version beofre submitting project

--- a/code/index.html
+++ b/code/index.html
@@ -11,8 +11,7 @@
   <body>
     <header>
       <h1 class="h1-header">
-          <!--Change Home-link to netlify url when deployed-->
-      <a href="/index.html">
+      <a href="https://harmonious-tarsier-058160.netlify.app/">
         <img src="/wine-glass-solid.svg" class="logo-wineglass" alt="Logo of wine glass">Wine Travels Magazine
       </a>
       </h1>
