--- a/code/index.html
+++ b/code/index.html
@@ -2,40 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <title>News site</title>
     <link rel="stylesheet" type="text/CSS" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
-    </style>
 </head>
 
-<body>
-    <nav class="menu">
-      <ul>
-  <li><a href="default.asp">News</a></li>
-  <li><a href="news.asp">Gallery</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class= "logo-style">
+<header>
+  <nav>
+    <div class="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
+    <div class= "logo-style">
         <img class ="logo" src="https://i.ibb.co/9v6k520/logo.png" alt="logo">
-    </div> 
-</div>
+    </div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
 
-
-
-</div>
 <div class="h1"> 
     <div style="text-align: center;">
         <h1>Travel News - Let's go!</h1>
     </div>
 </div>
 <section class="container-head-news">
-    <img class ="fit" src="https://i.ibb.co/LxzRJ93/Pexels-jaime-reimer-2662116.jpg" alt="Pexels-jaime-reimer-2662116">
+    <img class ="fit" src="https://i.ibb.co/LxzRJ93/Pexels-jaime-reimer-2662116.jpg" style="width: 300px; height: 300px;" alt="Pexels-jaime-reimer-2662116">
         <div class="top-news">
             <h3>FINALLY WE CAN START TRAVEL AGAIN</h3> 
                 <h4>Finally after 2 years not being able to travel, we are now able to travel again. And what an adventure it will be!</h4>
@@ -67,7 +63,7 @@
                 <p> Experience the most beautiful beaches around the world.
             </p>    
         </div>
-    <div class="item">
+      <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/6bLkm0Q/pexels-stein-egil-liland-1933239.jpg" style="width: 300px; height: 300px;" alt="pexels-stein-egil-liland-1933239">
             <h4>NORTHERN LIGHTS</h4>
                 <p> Experience the most extraordinary Northern lights in the world.
@@ -89,8 +85,8 @@
         <img class ="fit-image" img src="https://i.ibb.co/R46JFLV/pexels-baptiste-valthier-803226.jpg" style="width: 300px; height: 300px;" alt="pexels-baptiste-valthier-803226">
             <h4>CAMPING</h4>
                 <p> Experience camping in the most breathtaking environments around the world.
-            </p>    
-        </div>
+                  </p> 
+       </div>
     </section>
     
         <footer> 
