added a new div for animated box, for all screen sizes

--- a/code/index.html
+++ b/code/index.html
@@ -50,8 +50,12 @@
       <img src="main-news-image.jpeg" alt="Picture of hiking into sunset">
       </div>
     </section>
+        <!--box for animation purpose-->
+      <div class="animation-box">
+        <p>☀️HIKE☀️</p>
+      </div>
 
-      <!-- The news boxes  -->
+        <!-- The news boxes  -->
     <section class="info-boxes">
       <div class="box one">
         <div class="text-in-fatbox">
