added more styling and responsive design, worked some more with the content

--- a/code/index.html
+++ b/code/index.html
@@ -13,8 +13,8 @@
    
     <header class="header-content">
     <!-- Header -->
-        <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
-        <h1 class="header-name">kitsch culture</h1>
+      <img class="logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
+      <h1 class="header-name">Stories</h1>
       <nav class="header-navigation">
         <ul class="nav-bar">  
           <li><a class="nav-item button-1" href="https://www.google.com" target="_blank">LATEST</a></li>
@@ -30,137 +30,149 @@
       <!-- The big news -->
       <img class="big-news-image" src="./images/birmingham-museums-trust-Kv1hYl9LlxU-unsplash.jpg" alt="painting-of-woman">
       <div class="big-news-text-box">
-        <h2>The hungry woman</h2>
-        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <h2><span>Artemisia II of Caria</span></h2>
+        <p class="big-news-text">Artemisia is renowned in history for her extraordinary grief at the death of her husband Mausolus. She became "a lasting example of chaste widowhood and of the purest and rarest kind of love", in the words of Giovanni Boccaccio.</p>
         <a class="big-news-button" href="https://www.google.com/" target="_blank">Read more</a>
-        <img class="big-news-small-image" src="images/plant-upsidedown.svg" alt="leaves">
+        <img class="big-news-small-image" src="images/plant-upsidedown.svg" alt="a leaf">
       </div>
     </section>
 
     <section class="small-news-content">
-        <!-- The small news  -->
+      <!-- The small news  -->
       <div class="small-news-big-headline">
-          <h3>LATEST STORIES!</h3></div>
+          <h3>LATEST STORIES</h3></div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="">
-          <h5>ART</h5>
-        </div>
-        <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-        </div></div>
-      <div class="small-news-item">
-        <div class="small-img-box">
-          <img class="small-news-img" src="./images/pham-hien-triet-D0VpF1dwH18-unsplash.jpg" alt="">
-          <h5>PHOTOGRAGHY</h5>
-        </div>
-        <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-        </div>
-      </div>
-      <div class="small-news-item">
-        <div class="small-img-box">
-          <img class="small-news-img" src="./images/jr-korpa-zCuSa67rLEM-unsplash.jpg" alt="">
-          <h5>ART EXHIBITIONS</h5>
-        </div>
-        <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
-        </div>
-      </div>
-      <div class="small-news-item">
-        <div class="small-img-box">
-          <img class="small-news-img" src="./images/david-clode-5jSLBVqkwN4-unsplash.jpg" alt="">
+          <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="leaves">
           <h5>PLANTS</h5>
         </div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          <h4 class="small-headline"><span>Textures & Patterns</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
+        </div></div>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/pham-hien-triet-D0VpF1dwH18-unsplash.jpg" alt="baskets">
+          <h5>PHOTOGRAPHY</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline"><span>Ho Chi Minh City</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
         </div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/mark-west-lxIDlssshjA-unsplash.jpg" alt="">
+          <img class="small-news-img" src="./images/jr-korpa-zCuSa67rLEM-unsplash.jpg" alt="painting of a tree">
+          <h5>ART EXHIBITIONS</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline"><span>The art of JR Korpa</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
+        </div>
+      </div>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/david-clode-5jSLBVqkwN4-unsplash.jpg" alt="a leaf">
+          <h5>PLANTS</h5>
+        </div>
+        <div class="small-text-box">
+          <h4 class="small-headline"><span>Trees by Lake Barrine</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
+        </div>
+      </div>
+      <div class="small-news-item">
+        <div class="small-img-box">
+          <img class="small-news-img" src="./images/mark-west-lxIDlssshjA-unsplash.jpg" alt="a facade of a building ">
           <h5>ARCHITECTURE</h5>
         </div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          <h4 class="small-headline"><span>The Mars colony on Water Street</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
         </div>
       </div>
       <div class="small-news-item">
           <div class="small-img-box">
-            <img class="small-news-img" src="./images/luca-bravo-Fsw4uEDuQTY-unsplash.jpg" alt="">
+            <img class="small-news-img" src="./images/luca-bravo-Fsw4uEDuQTY-unsplash.jpg" alt="leaves">
             <h5>PLANTS</h5>
           </div>
           <div class="small-text-box">
-            <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+            <h4 class="small-headline"><span>Botanical garden in København</span></h4>
+            <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
           </div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-            <img class="small-news-img" src="./images/raelle-gann-owens-Nm-rqRSX810-unsplash.jpg" alt="">
+            <img class="small-news-img" src="./images/raelle-gann-owens-Nm-rqRSX810-unsplash.jpg" alt="a tree">
             <h5>TRAVEL</h5>
         </div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          <h4 class="small-headline"><span>Winter sunset on a gumtree</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
         </div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/isi-parente-uNWNFSgUa1c-unsplash.jpg" alt="">
-          <h5>TRAVEL</h5>
+          <img class="small-news-img" src="./images/isi-parente-uNWNFSgUa1c-unsplash.jpg" alt="a red shoe and a tv">
+          <h5>PHOTOGRAPHY</h5>
         </div>
           <div class="small-text-box">
-            <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+            <h4 class="small-headline"><span>Isi Parente behind the camera</span></h4>
+            <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
           </div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/frankie-cordoba-rQdriigkTQA-unsplash.jpg" alt="">
+          <img class="small-news-img" src="./images/frankie-cordoba-rQdriigkTQA-unsplash.jpg" alt="a man">
           <h5>INTERVIEW</h5>
         </div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4>
+          <h4 class="small-headline"><span>Meet Frankie Cordoba</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a>
         </div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/ryan-ancill-dBrIg3Cmhjw-unsplash.jpg" alt="">
-          <h5>ARCHITECTURE</h5></div>
+          <img class="small-news-img" src="./images/frankie-cordoba-pHg-N2WLu-w-unsplash.jpeg" alt="people on the beach">
+          <h5>TRAVEL</h5></div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
+          <h4 class="small-headline"><span>Beach 2023</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a></div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/ryan-ancill-1PNJjnBmiqo-unsplash.jpg" alt="">
-          <h5>TRAVEL</h5></div>
+          <img class="small-news-img" src="./images/alyani-yang-WajET_vzPmI-unsplash.jpeg" alt="a climbing plant on a wall">
+          <h5>PLANTS</h5></div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
+          <h4 class="small-headline"><span>Climbing plants for your garden</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a></div>
       </div>
       <div class="small-news-item">
         <div class="small-img-box">
-          <img class="small-news-img" src="./images/benjamin-shurance-geJkMH8Gffc-unsplash.jpg" alt="">
-          <h5>TRAVEL</h5></div>
+          <img class="small-news-img" src="./images/paul-blenkhorn-y7qrfm1Mjds-unsplash.jpeg" alt="an abstract painting">
+          <h5>PAINTING</h5></div>
         <div class="small-text-box">
-          <h4 class="small-headline">Lorem ipsum dolor sit amet consectetuer</h4></div>
+          <h4 class="small-headline"><span>Kitchen mysteries</span></h4>
+          <a class="small-news-button" href="https://www.google.com/" target="_blank">Read more</a></div>
       </div>
     </section>
 
     <footer>
-      <!-- The footer  -->
-      <img class="footer-logo" src="./images/mag-logo-oi.png" alt="">
-      <div class="footer-icons">
-          <i class="fa-brands fa-square-facebook"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-youtube"></i>
-          <i class="fa-brands fa-pinterest"></i>
-          <i class="fa-brands fa-tumblr"></i></div>
-      <nav class="footer-nav-bar">
-          <a class="footer-nav-item" href="https://www.google.com" target="_blank">about us</a>
-          <a class="footer-nav-item" href="https://www.google.com" target="_blank">contact</a>
-          <a class="footer-nav-item" href="https://www.google.com" target="_blank">store</a>
-          <a class="footer-nav-item" href="https://www.google.com" target="_blank">terms</a>
-      </nav>
-      <p class="footer-copyright">© kitsch culture 2023</p>
+    <!-- The footer  -->
+    <img class="footer-logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
+    <div class="footer-icons">
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-tumblr"></i></a></div>
+    <nav class="footer-nav-bar">
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank">about us</a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank">contact</a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank">store</a>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank">terms</a>
+    </nav>
+    <p class="footer-copyright">© kitsch culture 2023</p>
     </footer>
 
   </body>
